--- a/src/components/Carts/payment.scss
+++ b/src/components/Carts/payment.scss
@@ -1,3 +1,7 @@
+@use '../../scss/' as vn;
+@import '../../scss/variables';
+@import '../../scss/mixin';
+
 .paymentContainer {
   display: grid;
   place-items: center;
@@ -45,7 +49,7 @@
 
 .paymentFormBtn {
   border: none;
-  background-color: tomato;
+  background-color: $main-color;
   color: white;
   width: 100%;
   padding: 0.8vmax;
@@ -55,7 +59,7 @@
 }
 
 .paymentFormBtn:hover {
-  background-color: rgb(179, 66, 46);
+  background-color: $main-color;
 }
 
 @media screen and (max-width: 600px) {
