--- a/src/components/Carts/checkoutSteps.scss
+++ b/src/components/Carts/checkoutSteps.scss
@@ -1,3 +1,22 @@
 @use '../../scss/' as vn;
 @import '../../scss/variables';
 @import '../../scss/mixin';
+
+.MuiStepConnector-line {
+  display: none !important;
+}
+
+.MuiStepConnector-root {
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.349);
+}
+
+.MuiStepConnector-active,
+.MuiStepConnector-completed {
+  background-color: $main-color;
+}
+.checkout-step {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
