--- a/src/components/Carts/confirmOrder.scss
+++ b/src/components/Carts/confirmOrder.scss
@@ -3,6 +3,7 @@
   background-color: white;
   display: grid;
   grid-template-columns: 6fr 3fr;
+  margin-bottom: 90px;
 }
 
 .confirmOrderPage > div:last-child {
@@ -116,6 +117,7 @@
   .confirmOrderPage > div:last-child {
     border-left: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.247);
+    margin: 0 16px;
   }
 
   .confirmshippingAreaBox > div {
