--- a/src/components/Order/myOrder.scss
+++ b/src/components/Order/myOrder.scss
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
 
-  #myOrdersHeading {
+  .myOrdersHeading {
     text-align: center;
     font-size: 2rem;
     padding: 0.5vmax;
@@ -46,19 +46,6 @@
       }
     }
   }
-
-  // .MuiDataGrid-columnHeader {
-  //   background-color: black;
-  //   padding: 1vmax !important;
-  // }
-
-  // .MuiDataGrid-columnHeader div {
-  //   color: rgb(255, 255, 255);
-  // }
-
-  // .MuiDataGrid-iconSeparator {
-  //   display: none !important;
-  // }
 }
 
 @media screen and (max-width: 600px) {
@@ -67,20 +54,12 @@
     height: 93vh;
   }
 
-  #myOrdersHeading {
+  .myOrdersHeading {
     font: 400 2.2vmax 'Roboto';
     padding: 4vw;
   }
 
   .myOrdersTable div {
     font: 300 4vw 'Roboto';
-  }
-
-  .MuiDataGrid-columnHeader {
-    padding: 20px !important;
-  }
-
-  .MuiDataGrid-columnHeader div {
-    font: 500 5vw 'Roboto' !important;
   }
 }
